<?xml version="1.0"?>
<package>
  <name>motorosudp</name>
  <version>0.1.0</version>
  <description>

     motorosudp

  </description>
  <maintainer email="tapati@gmail.com">tapati</maintainer>
  <author>tapati</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <build_depend>interactive_markers</build_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>serial</run_depend>
  <build_depend>serial</build_depend>

 
</package>
